Allow patching recipes
