# api/openapi.yml
@@ -240,6 +240,33 @@ paths:
           $ref: '#/components/responses/Recipe'
         default:
           $ref: '#/components/responses/Error'
+    patch:
+      tags:
+        - Recipes
+      summary: Partially update a recipe
+      description: Apply partial updates to a recipe by merging the provided fields
+      operationId: patchRecipe
+      parameters:
+        - name: recipeId
+          in: path
+          description: ID of the recipe to patch
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Partial recipe data to merge
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchRecipe'
+      responses:
+        '200':
+          description: successful operation
+          $ref: '#/components/responses/Recipe'
+        default:
+          $ref: '#/components/responses/Error'
     delete:
       tags:
         - Recipes
@@ -843,13 +870,8 @@ components:
           type: string
           examples:
             - abd87ec862b6b8ecc2cf45c170d887d21e835a35f8537ea35ff1af102faa5920
-    BaseRecipe:
+    RecipeBaseFields:
       type: object
-      required:
-        - description
-        - minutes
-        - name
-        - servings
       properties:
         name:
           type: string
@@ -882,12 +904,10 @@ components:
       encoding:
         images:
           contentType: image/jpeg, image/png
-    WriteRecipe:
+    RecipeWriteFields:
       allOf:
-        - $ref: '#/components/schemas/BaseRecipe'
+        - $ref: '#/components/schemas/RecipeBaseFields'
         - type: object
-          required:
-            - steps
           properties:
             steps:
               type: array
@@ -900,6 +920,24 @@ components:
                 format: int64
                 examples:
                   - 1
+    BaseRecipe:
+      allOf:
+        - $ref: '#/components/schemas/RecipeBaseFields'
+        - type: object
+          required:
+            - description
+            - minutes
+            - name
+            - servings
+    WriteRecipe:
+      allOf:
+        - $ref: '#/components/schemas/RecipeWriteFields'
+        - $ref: '#/components/schemas/BaseRecipe'
+        - type: object
+          required:
+            - steps
+    PatchRecipe:
+      $ref: '#/components/schemas/RecipeWriteFields'
     Vote:
       type: object
       required:
